--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "name": "react-typescript-starter-pack",
   "version": "0.1.0",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.5.1",
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "bulma": "^0.9.4",
     "classnames": "^2.3.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "typescript": "^4.6.3",
     "typescript-eslint-parser": "^22.0.0",
     "web-vitals": "^1.1.1"
@@ -44,12 +45,13 @@
   "devDependencies": {
     "@mate-academy/eslint-config-react-typescript": "latest",
     "@mate-academy/students-ts-config": "latest",
-    "@types/node": "^16.18.80",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
+    "@types/node": "^16.18.104",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-transition-group": "^4.4.10",
     "eslint": "^7.32.0",
     "gh-pages": "^6.1.1",
-    "sass": "^1.72.0",
-    "prettier": "^3.2.5"
+    "prettier": "^3.3.3",
+    "sass": "^1.77.8"
   }
 }
